List of formations and colors adjustment.
Co-authored-by: Tony COLAS <colas.tony47@gmail.com>
Co-authored-by: Juliette REISSER <juliette.reisser@gmail.com>

--- a/accueil.html
+++ b/accueil.html
@@ -4,12 +4,37 @@
 <head>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="./accueil.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300&display=swap" rel="stylesheet">
 	<title>Accueil</title>
 </head>
 
 <body>
+	<div class="formation-block">
+		<div class="card">
+			<h3>Formation 1</h3>
+			<p>Diplôme</p>
+		</div>
+
+		<div class="card">
+			<h3>Formation 2</h3>
+			<p>Diplôme</p>
+		</div>
+
+		<div class="card">
+			<h3>Formation 3</h3>
+			<p>Diplôme</p>
+		</div>
+
+		<div class="card">
+			<h3>Formation 4</h3>
+			<p>Diplôme</p>
+		</div>
+	</div>
+
 	<div class="main-block">
-		<h3>EXPERTS SINCE 1997</h3>
+		<h4>EXPERTS SINCE 1997</h4>
 		<h2>Maman Corp. is a comprehensive construction management team and general contractor.</h2>
 		<p>We create environments for your team to do its best work. We do it through expertise, creativity, and attention to every detail—our ingredients for over 20 years of success.</p>
 	</div>
