--- a/accueil.html
+++ b/accueil.html
@@ -33,6 +33,13 @@
 		</div>
 	</div>
 
+	<div class="video block">
+		<video autoplay muted loop><!-- poster="vignette.jpg"> -->
+			<source src="res/accueil.mp4" type="video/mp4">
+		</video>
+	</div>
+	
+
 	<div class="main-block">
 		<h4>EXPERTS SINCE 1997</h4>
 		<h2>Maman Corp. is a comprehensive construction management team and general contractor.</h2>
