--- a/html/courDuSoir.html
+++ b/html/courDuSoir.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Cour du soir</title>
-    <a href="../css/courDuSoir.css"></a>
-    <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E
+    <link rel="stylesheet" href="../css/courDuSoir.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Otomanopee+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -14,7 +16,21 @@
         <div class="intro">
             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
         </div>
-        <div class=""></div>
+        <div class="form">
+            <form>
+                <h2>Choix du stage</h2>
+                <p>
+                    <label for="card">
+                        <span>type de stage</span>
+                    </label>
+                    <select id="card" name="usercard">
+                        <option value="visa">connection avec la nature via usb9</option>
+                        <option value="mc">bulle d'apprentissage</option>
+                        <option value="amex">cybert prof</option>
+                    </select>
+                </p>
+            </form>
+        </div>
     </div>
 
 </body>
