--- a/technologie.html
+++ b/technologie.html
@@ -1,22 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="./nav_footer.css">
+        <link rel="stylesheet" href="./technologie.css">
+        <title>Programme technologique</title>
+    </head>
+    <body>
+        <nav>
+            <h1>Tomorrow School</h1>
+            <div class="onglets">
+                <a href="#">Acceuil</a>
+                <a href="#produits">Programmes</a>
+                <a href="#engagements">Nos Engagements</a>
+                <a href="#contact">Contact</a>
+            </div>
+        </nav>
+        <header>
+            <h1>Programmes technologiques</h1>
+            <h4>l'apprentissage 4.0</h4>
+        </header>
 
-<head>
-	<meta charset="utf-8">
-	<link rel="stylesheet" href="./accueil.css">
-	<title>Accueil</title>
-</head>
+        <section class="main" id="produits">
 
-<body>
-	<div class="main-block">
-		<h3>EXPERTS SINCE 1997</h3>
-		<h2>Maman Corp. is a comprehensive construction management team and general contractor.</h2>
-		<p>We create environments for your team to do its best work. We do it through expertise, creativity, and attention to every detail—our ingredients for over 20 years of success.</p>
-	</div>
+            <div class="content">
+                <div class="card">
+                    <div class="left">
+                        <h1>La réalité virtuelle</h1>
+                        <p>Mangez sainement mais délicieusement. Nos clients sont rois, nos clients sont nos patrons.</p>
+                    </div>
+                    <div class="right">
+                        <img src="https://i.ibb.co/WWnjDdG/burger1.jpg" alt="">
+                    </div>
+                </div>
 
-	<div class="arrow-block">
-		<p>Explorer</p>
-	</div>
-</body>
+                <div class="card">
+                    <div class="left">
+                        <h1>l'élevage robotique</h1>
+                        <p>Nous mettons à votre disposition les recettes de nos burgers les plus délicieux ! </p>
+                    </div>
+                    <div class="right">
+                        <img src="https://i.ibb.co/LS2T9sD/burger2.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <footer>
 
+            <h1>Nos services</h1>
+            <div class="services">
+                
+                <div class="service">
+                    <h3>Internat</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, quidem recusandae explicabo veniam voluptatem voluptatum reprehenderit dignissimos ipsum magnam accusantium, dolores odio, dolorem provident sapiente consequuntur harum eaque veritatis? Eveniet.</p>
+                </div>
+
+            </div>
+
+            <p id="contact">Contact : 00 00 00 00 00 | &copy; 4022, Tomorrow School.</p>
+        </footer>
+    </body>
 </html>
