List lisibility and add discret links.
Co-authored-by: Tony COLAS <colas.tony47@gmail.com>
Co-authored-by: Juliette REISSER <juliette.reisser@gmail.com>

--- a/accueil.html
+++ b/accueil.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
 	<meta charset="utf-8">
@@ -12,34 +12,41 @@
 
 <body>
 	<div class="formation-block">
-		<div class="card">
-			<h3>Formation 1</h3>
-			<p>Diplôme</p>
-		</div>
+		<a href="">
+			<div class="card">
+				<h3>Formation 1</h3>
+				<p>Diplôme</p>
+			</div>
+		</a>
 
-		<div class="card">
-			<h3>Formation 2</h3>
-			<p>Diplôme</p>
-		</div>
+		<a href="">
+			<div class="card">
+				<h3>Formation 2</h3>
+				<p>Diplôme</p>
+			</div>
+		</a>
 
-		<div class="card">
-			<h3>Formation 3</h3>
-			<p>Diplôme</p>
-		</div>
+		<a href="">
+			<div class="card">
+				<h3>Formation 3</h3>
+				<p>Diplôme</p>
+			</div>
+		</a>
 
-		<div class="card">
-			<h3>Formation 4</h3>
-			<p>Diplôme</p>
-		</div>
+		<a href="">
+			<div class="card">
+				<h3>Formation 4</h3>
+				<p>Diplôme</p>
+			</div>
+		</a>
 	</div>
 
 	<div class="video block">
-		<video autoplay muted loop><!-- poster="vignette.jpg"> -->
+		<video autoplay muted loop>
 			<source src="res/accueil.mp4" type="video/mp4">
 		</video>
 	</div>
 	
-
 	<div class="main-block">
 		<h4>EXPERTS SINCE 1997</h4>
 		<h2>Maman Corp. is a comprehensive construction management team and general contractor.</h2>
@@ -47,7 +54,7 @@
 	</div>
 
 	<div class="arrow-block">
-		<p>Explorer</p>
+		<p><a href="">Explorer</a></p>
 	</div>
 </body>
 
