Added some credible text, sometimes not.
Co-authored-by: Tony COLAS <colas.tony47@gmail.com>
Co-authored-by: Juliette REISSER <juliette.reisser@gmail.com>

--- a/accueil.html
+++ b/accueil.html
@@ -14,29 +14,29 @@
 	<div class="formation-block">
 		<a href="">
 			<div class="card">
-				<h3>Formation 1</h3>
-				<p>Diplôme</p>
+				<h3>Ingénieur d'étude des milieux naturels</h3>
+				<p>Titre niveau 7 RNCP - Bac+5</p>
 			</div>
 		</a>
 
 		<a href="">
 			<div class="card">
-				<h3>Formation 2</h3>
-				<p>Diplôme</p>
+				<h3>Expert urbanisme numérique</h3>
+				<p>Titre niveau 7 RNCP - Bac+5</p>
 			</div>
 		</a>
 
 		<a href="">
 			<div class="card">
-				<h3>Formation 3</h3>
-				<p>Diplôme</p>
+				<h3>Responsable en gestion paysage</h3>
+				<p>Titre niveau 6 RNCP - Bac+3</p>
 			</div>
 		</a>
 
 		<a href="">
 			<div class="card">
-				<h3>Formation 4</h3>
-				<p>Diplôme</p>
+				<h3>Prépa Technicien Environnement</h3>
+				<p>Titre niveau 5 RNCP - Bac+2</p>
 			</div>
 		</a>
 	</div>
@@ -48,9 +48,9 @@
 	</div>
 	
 	<div class="main-block">
-		<h4>EXPERTS SINCE 1997</h4>
-		<h2>Maman Corp. is a comprehensive construction management team and general contractor.</h2>
-		<p>We create environments for your team to do its best work. We do it through expertise, creativity, and attention to every detail—our ingredients for over 20 years of success.</p>
+		<h4>FORMATEURS DEPUIS 2001</h4>
+		<h2>Tomorrow School. quand la Nature rencontre le Numérique</h2>
+		<p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit... There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain...</p>
 	</div>
 
 	<div class="arrow-block">
