--- a/contact.html
+++ b/contact.html
@@ -6,57 +6,85 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E%22%3E">
+        <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Otomanopee+One&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E">
+        <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300&display=swap" rel="stylesheet">
         <title>Nous contacter</title>
     </head>
 
     <body>
-        <h1>Formulaire de contact</h1>
+        <div class="titre0">
+            <h1>Formulaire de contact</h1>
+        </div>        
         <div class="display">
                     <div class="c1">
-                        <h3>Identité & Coordonnées</h3>
-                        <form action="" method="POST">                            
-                            <input type="text" id="lastname" placeholder="Votre prénom" required>
-                            <br>
-                            <input type="text" id="firstname" placeholder="Votre nom" required>
-                            <br>
-                            <input type="text" id="age" placeholder="Votre âge" required>
-                            <br>
-                            <input type="email" id="email" placeholder="Votre mail" required>
-                            <br>
-                            <input type="tel" id="tel" placeholder="Votre numéro de téléphone" required>
-                            <br>
-                            <input type="adress" id="adress" placeholder="Votre adresse postale" required>
+                        <div class="titre1">
+                            <h3>Contactez nous</h3>
+                        </div>                        
+                        <form action="" method="POST">
+                            <div class="cont1">
+                                <input type="radio" name="gender" id="mr" value="mr" checked>
+                                <label for="mr">Mr</label>
+                                <input type="radio" name="gender" id="mme" value="mme">
+                                <label for="mme">Mme</label>
+                                <input type="radio" name="gender" id="mut" value="mutant">
+                                <label for="mutant">Mutant</label>
+                                <br>
+                                <input type="text" id="lastname" placeholder="Votre prénom" required>
+                                <input type="text" id="firstname" placeholder="Votre nom" required>
+                                <br>
+                                <input type="text" id="age" placeholder="Votre âge" required>
+                                <br>
+                                <input type="email" id="email" placeholder="Votre mail" required>
+                                <input type="tel" id="tel" placeholder="Votre numéro de téléphone" required>
+                                <br>
+                                <input type="adress" id="adress" placeholder="Votre adresse postale" required>
+                                <br>
+                            </div>
+                            <div class="cont2">
+                                <textarea name="message" id="message" cols="50" rows="15" placeholder="Votre message"></textarea>
+                                <br>
+                                <input type="radio" name="type" id="parent">
+                                <label for="parent">Parent d'élève</label>
+                                <input type="radio" name="type" id="etudiant" checked>
+                                <label for="etudiant">Etudiant</label>
+                            </div>
+                            <div class="cont3">
+                                <button type="submit">Soumettre</button>
+                            </div>                       
                         </form>
                     </div>
-                    <div class="c2">
-                        <h3>Ecrivez-nous !</h3>
-                        <form action="" method="POST">
-                            <textarea name="message" id="" cols="30" rows="10" placeholder="Votre message"></textarea>
-                        </form>                        
-                    </div>
-                    <div class="c3">
-                        <form action="" method="POST">
-                            <button type="submit">Envoyer</button>                        
-                        </form>                        
-                    </div>
-            <div class="c4">
-                <h3>Horaires d'ouverture</h3>
-                <ul>
-                    <li><strong>Lundi : </strong></li>
-                    <li><strong>Mardi : </strong></li>
-                    <li><strong>Mercredi : </strong></li>
-                    <li><strong>Jeudi : </strong></li>
-                    <li><strong>Vendredi : </strong></li>
-                    <li><strong>Week-end & Jours fériés : </strong></li>
-                </ul>
+            <div class="c3">
+                <div class="titre2">
+                    <h3>Horaires d'ouverture</h3>
+                </div>                
+                <div class="horaire">
+                    <ul>
+                        <li><strong>Lundi : </strong></li>
+                        <li><strong>Mardi : </strong></li>
+                        <li><strong>Mercredi : </strong></li>
+                        <li><strong>Jeudi : </strong></li>
+                        <li><strong>Vendredi : </strong></li>
+                        <li><strong>Week-end & Jours fériés : </strong></li>
+                    </ul>
+                </div>
+                
             </div>
-            <div class="c5">
-                <h3>Coordonnées de l'école</h3>
+            <div class="c4">
+                <div class="titre3">
+                    <h3>Coordonnées de l'école</h3>
+                </div>                
                 <div class="coord1">
                     <h4>Adresse : </h4>
                     6 Place Charles Hernu, 69100 - Villeurbanne
                     <h4>Téléphone : </h4>
                     04 04 04 04 04
+                    <h4>Retrouvez-nous sur les réseaux : </h4>
+                    <a href="https://www.facebook.fr">facebook</a>
+                    <a href="https://www.twitter.fr">Twitter</a>
+                    <a href="https://www.youtube.fr">YouTube</a>
                 </div>
                 <div class="coord2">
                     <h4>Plan d'accès : </h4>
