mise en forme v2

--- a/technologie.html
+++ b/technologie.html
@@ -26,21 +26,21 @@
             <div class="content">
                 <div class="card">
                     <div class="left">
-                        <h1>La réalité virtuelle</h1>
-                        <p>Mangez sainement mais délicieusement. Nos clients sont rois, nos clients sont nos patrons.</p>
+                        <img src="./img/brendan-bottomley-helmetposter2.jpg" alt="">
                     </div>
                     <div class="right">
-                        <img src="https://i.ibb.co/WWnjDdG/burger1.jpg" alt="">
+                        <h1>La réalité virtuelle</h1>
+                        <p>Apprentissage et entrainement toujour a porté de main.</p>
                     </div>
                 </div>
 
                 <div class="card">
                     <div class="left">
                         <h1>l'élevage robotique</h1>
-                        <p>Nous mettons à votre disposition les recettes de nos burgers les plus délicieux ! </p>
+                        <p>Fabrication et éducation de robots domestique et d'aide agricole. </p>
                     </div>
                     <div class="right">
-                        <img src="https://i.ibb.co/LS2T9sD/burger2.jpg" alt="">
+                        <img src="./img/pedro-tavares-santos-2.jpg" alt="">
                     </div>
                 </div>
             </div>
