--- a/header_footer.html
+++ b/header_footer.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <nav>
-            <h1>Tomorrow School</h1>
+            <h1><img src="img/leaf.png" alt=""> Tomorrow School</h1>
             <div class="onglets">
                 <a href="#">Acceuil</a>
                 <a href="#produits">Programmes</a>
