--- a/header_footer.html
+++ b/header_footer.html
@@ -14,7 +14,7 @@
                 </div>
                 
                 <div class="onglets">
-                    <a href="#">Acceuil</a>
+                    <a href="#accueil">Accueil</a>
                     <a class="programmes" href="#produits">Programmes 
                         <ul class="sousMenu">
                             <li>Programmes technologiques</li>
