--- a/header_footer.html
+++ b/header_footer.html
@@ -15,7 +15,7 @@
                 
                 <div class="onglets">
                     <a href="accueil.html">Acceuil</a>
-                    <a class="programmes" href="produits.html">Programmes 
+                    <a class="programmes">Programmes 
                         <ul class="sousMenu">
                             <li href="technologie.html">Programmes technologiques</li>
                             <li href="ecologique.html">Programmes écologiques<</li>
