mise en forme v4

--- a/technologie.html
+++ b/technologie.html
@@ -15,10 +15,10 @@
     
                 <div class="onglets">
                     <a href="#">Acceuil</a>
-                    <a class="programmes" href="#produits">Programmes 
+                    <a class="programmes" href="">Programmes 
                         <ul class="sousMenu">
-                            <li>Programmes technologiques</li>
-                            <li>Programmes écologiques</li>
+                            <li href="#">Programmes technologiques</li>
+                            <li href="#">Programmes écologiques</li>
                         </ul>
                     </a>
                     <a href="#engagements">Nos Engagements</a>
@@ -37,6 +37,7 @@
                         </div>
                         <div class="right">
                             <h1 class="program">La réalité virtuelle</h1>
+                            <br>
                             <p>Apprentissage et entrainement toujour a porté de main.</p>
                         </div>
                     </div>
@@ -44,6 +45,7 @@
                     <div class="card">
                         <div class="left">
                             <h1 class="program">l'élevage robotique</h1>
+                            <br>
                             <p>Fabrication et éducation de robots domestique et d'aide agricole. </p>
                         </div>
                         <div class="right">
@@ -54,17 +56,19 @@
                 <div>
                     <div class="card">
                         <div class="left">
-                            <img src="./img/brendan-bottomley-helmetposter2.jpg" alt="">
+                            <img src="./img/jason-blackeye-10ui0BryWK8-unsplash.jpg" alt="">
                         </div>
                         <div class="right">
-                            <h1 class="program">La réalité virtuelle</h1>
-                            <p>Apprentissage et entrainement toujour a porté de main.</p>
+                            <h1 class="program">La conduite de drone</h1>
+                            <br>
+                            <p>apprentissage et maitrise du pilotage de dronde</p>
                         </div>
                     </div>
 
                     <div class="card">
                         <div class="left">
                             <h1 class="program">l'élevage robotique</h1>
+                            <br>
                             <p>Fabrication et éducation de robots domestique et d'aide agricole. </p>
                         </div>
                         <div class="right">
