Add header to home page.
Co-authored-by: Tony COLAS <colas.tony47@gmail.com>
Co-authored-by: Juliette REISSER <juliette.reisser@gmail.com>

--- a/accueil.html
+++ b/accueil.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="./css/accueil.css">
+	<link rel="stylesheet" href="./HEADER_FOOTER.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300&display=swap" rel="stylesheet">
@@ -11,6 +12,26 @@
 </head>
 
 <body>
+	<header>
+		<nav>
+			<div class="logo">
+					<img src="img/leaf.png" alt=""><h1> Tomorrow School</h1>
+			</div>
+				
+			<div class="onglets">
+				<a href="accueil.html">Accueil</a>
+				<a class="programmes">Programmes 
+					<ul class="sousMenu">
+						<li href="technologie.html">Programmes technologiques</li>
+						<li href="ecologique.html">Programmes écologiques<</li>
+					</ul>
+				</a>
+				<a href="engagements.html">Nos Engagements</a>
+				<a href="contact.html">Contact</a>
+			</div>
+		</nav>
+</header>
+
 	<div class="formation-block">
 		<a href="">
 			<div class="card">
@@ -54,7 +75,7 @@
 	</div>
 
 	<div class="arrow-block">
-		<p><a href="">Explorer</a></p>
+		<p><a href="./engagements.html">Explorer</a></p>
 	</div>
 </body>
 
