--- a/html/courDuSoir.html
+++ b/html/courDuSoir.html
@@ -13,37 +13,12 @@
 </head>
 <body>
     <div class="wrapper">
-        <h1> Cours du soir et stages</h1>
+        <div class="titre0">
+            <h1> Cours du soir et stages</h1>
+        </div>
 
-        <div class="display">
-            <div class="container">
+            <div class="box0">
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-            </div>
-
-            <div class="container">
-                <form>
-                    <h2>Choix du stage</h2>
-                    <p>
-                        <label for="card">
-                            <span>type de stage</span>
-                        </label>
-                        <select id="card" name="type">
-                            <option value="visa">se connecter avec l'arbre des connaissances</option>
-                            <option value="mc">cybert prof </option>
-                            <option value="amex">bulle d'apprentissage</option>
-                        </select>
-                    </p>
-                    <p>
-                        <label for="card">
-                            <span>accessibilité</span>
-                        </label>
-                        <select id="card" name="acces">
-                            <option value="visa">tout public</option>
-                            <option value="mc"> public avertit </option>
-                            <option value="amex">public sensibiliser</option>
-                        </select>
-                    </p>
-                </form>
             </div>
 
             <div class="box1">
@@ -67,7 +42,7 @@
 
             <div class="box2">
                 <div class="title">
-                    <h1 class="cyb">cyber prof</h1>
+                    <h1 >cyber prof</h1>
                     <span>#tout public</span>
                 </div>
 
@@ -104,25 +79,51 @@
                 </div>
             </div>
 
-            <div class="container">
-                <form>
+            <div class="box4">
+                <div class="titre">
                     <h2>Choix du stage</h2>
+                </div>
+                <div class="form">
+                    <form>
+                        <div class="form1">
+                            <label for="card">
+                                <span>type de stage</span>
+                            </label>
 
-                    <label for="card">
-                        <span>type de stage</span>
-                    </label>
+                            <select id="card" name="selectType">
+                                <option value="visa">connection avec la nature via usb9</option>
+                                <option value="mc">bulle d'apprentissage</option>
+                                <option value="amex">cybert prof</option>
+                            </select>
 
-                    <select id="card" name="selectType">
-                        <option value="visa">connection avec la nature via usb9</option>
-                        <option value="mc">bulle d'apprentissage</option>
-                        <option value="amex">cybert prof</option>
-                    </select>
-
-                    <button type="submit">valider choix </button>
-
-                </form>
+                            <button type="submit">valider choix </button>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
 </body>
 </html>
+
+
+<!-- <form>
+                            <label>
+                                <select name="type">
+                                    <option value="visa">se connecter avec l'arbre des connaissances</option>
+                                    <option value="mc">cybert prof </option>
+                                    <option value="amex">bulle d'apprentissage</option>
+                                </select>
+                            </label>
+                        </p>
+                        <p>
+                            <label for="card">
+                                <span>accessibilité</span>
+                            </label>
+                            <select name="acces">
+                                <option value="visa">tout public</option>
+                                <option value="mc"> public avertit </option>
+                                <option value="amex">public sensibiliser</option>
+                            </select>
+                        </p>
+                    </form>-->
