--- a/technologie.html
+++ b/technologie.html
@@ -2,7 +2,6 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="./nav_footer.css">
         <link rel="stylesheet" href="./technologie.css">
         <title>Programme technologique</title>
     </head>
@@ -15,14 +14,14 @@
     
                 <div class="onglets">
                     <a href="#">Acceuil</a>
-                    <a class="programmes" href="">Programmes 
+                    <a class="programmes" href="#produits">Programmes 
                         <ul class="sousMenu">
-                            <li href="#">Programmes technologiques</li>
-                            <li href="#">Programmes écologiques</li>
+                            <li>Programmes technologiques</li>
+                            <li>Programmes écologiques</li>
                         </ul>
                     </a>
-                    <a href="#engagements">Nos Engagements</a>
-                    <a href="#contact">Contact</a>
+                    <a href="engagements.html">Nos Engagements</a>
+                    <a href="contact.html">Contact</a>
                 </div>
             </nav>
         </header>
@@ -37,7 +36,6 @@
                         </div>
                         <div class="right">
                             <h1 class="program">La réalité virtuelle</h1>
-                            <br>
                             <p>Apprentissage et entrainement toujour a porté de main.</p>
                         </div>
                     </div>
@@ -45,7 +43,6 @@
                     <div class="card">
                         <div class="left">
                             <h1 class="program">l'élevage robotique</h1>
-                            <br>
                             <p>Fabrication et éducation de robots domestique et d'aide agricole. </p>
                         </div>
                         <div class="right">
@@ -56,19 +53,17 @@
                 <div>
                     <div class="card">
                         <div class="left">
-                            <img src="./img/jason-blackeye-10ui0BryWK8-unsplash.jpg" alt="">
+                            <img src="./img/brendan-bottomley-helmetposter2.jpg" alt="">
                         </div>
                         <div class="right">
-                            <h1 class="program">La conduite de drone</h1>
-                            <br>
-                            <p>apprentissage et maitrise du pilotage de dronde</p>
+                            <h1 class="program">La réalité virtuelle</h1>
+                            <p>Apprentissage et entrainement toujour a porté de main.</p>
                         </div>
                     </div>
 
                     <div class="card">
                         <div class="left">
                             <h1 class="program">l'élevage robotique</h1>
-                            <br>
                             <p>Fabrication et éducation de robots domestique et d'aide agricole. </p>
                         </div>
                         <div class="right">
