--- a/technologie.html
+++ b/technologie.html
@@ -36,6 +36,7 @@
                         </div>
                         <div class="right">
                             <h1 class="program">La réalité virtuelle</h1>
+                            <br>
                             <p>Apprentissage et entrainement toujour a porté de main.</p>
                         </div>
                     </div>
@@ -43,6 +44,7 @@
                     <div class="card">
                         <div class="left">
                             <h1 class="program">l'élevage robotique</h1>
+                            <br>
                             <p>Fabrication et éducation de robots domestique et d'aide agricole. </p>
                         </div>
                         <div class="right">
@@ -56,14 +58,16 @@
                             <img src="./img/brendan-bottomley-helmetposter2.jpg" alt="">
                         </div>
                         <div class="right">
-                            <h1 class="program">La réalité virtuelle</h1>
-                            <p>Apprentissage et entrainement toujour a porté de main.</p>
+                            <h1 class="program">Conduite de drone/h1>
+                            <br>
+                            <p>Apprentissage et maitrise du pilotage de drone.</p>
                         </div>
                     </div>
 
                     <div class="card">
                         <div class="left">
                             <h1 class="program">l'élevage robotique</h1>
+                            <br>
                             <p>Fabrication et éducation de robots domestique et d'aide agricole. </p>
                         </div>
                         <div class="right">
