--- a/technologie.html
+++ b/technologie.html
@@ -55,10 +55,10 @@
                 <div>
                     <div class="card">
                         <div class="left">
-                            <img src="./img/brendan-bottomley-helmetposter2.jpg" alt="">
+                            <img src="./img/jason-blackeye-10ui0BryWK8-unsplash.jpg" alt="">
                         </div>
                         <div class="right">
-                            <h1 class="program">Conduite de drone/h1>
+                            <h1 class="program">Conduite de drone</h1>
                             <br>
                             <p>Apprentissage et maitrise du pilotage de drone.</p>
                         </div>
@@ -66,12 +66,12 @@
 
                     <div class="card">
                         <div class="left">
-                            <h1 class="program">l'élevage robotique</h1>
+                            <h1 class="program">Excursion Spatiale</h1>
                             <br>
                             <p>Fabrication et éducation de robots domestique et d'aide agricole. </p>
                         </div>
                         <div class="right">
-                            <img src="./img/pedro-tavares-santos-2.jpg" alt="">
+                            <img src="./img/longque-chen-fly-space-mech-final-painting-33-2.jpg" alt="">
                         </div>
                     </div>
                 </div>
