--- a/engagements.html
+++ b/engagements.html
@@ -31,6 +31,7 @@
                     </ul>
                 </a>
                 <a href="engagements.html">Nos Engagements</a>
+                <a href="stage.html">Stage</a>
                 <a href="contact.html">Contact</a>
             </div>
         </nav>
@@ -94,6 +95,7 @@
             <ul>
                 <li><a href="index.html">Acceuil</a></li>
                 <li><a href="engagements.html">Nos Engagement</a></li>
+                <li><a href="stage.html">Stage</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
