--- a/technologie.html
+++ b/technologie.html
@@ -87,7 +87,7 @@
             
             <div class="block2">
                 <ul>
-                    <li><a href="accueil.html">Acceuil</a></li>
+                    <li><a href="index.html">Acceuil</a></li>
                     <li><a href="engagements.html">Nos Engagement</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
