--- a/ecologique.html
+++ b/ecologique.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>tp group</title>
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/ecologie.css">
 	<meta charset="utf-8">
 </head>
 <body>
