--- a/technologie.html
+++ b/technologie.html
@@ -27,7 +27,10 @@
         </header>
 
         <section class="main" id="produits">
-
+            <div class="top_head">
+                <h1>Programme Technologique</h1>
+                <h4>L'école 4.0</h4>
+            </div>
             <div class="content">
                 <div>
                     <div class="card">
